--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 <body>
     <div id="root"></div>
     <script type="module" src="index.js"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </body>
 </html>
